--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -193,8 +193,26 @@
   organization={IEEE}
 }
 
+@inproceedings{jiang2017semi,
+  title={Semi-federated scheduling of parallel real-time tasks on multiprocessors},
+  author={Jiang, Xu and Guan, Nan and Long, Xiang and Yi, Wang},
+  booktitle={2017 IEEE Real-Time Systems Symposium (RTSS)},
+  pages={80--91},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{ueter2018reservation,
+  title={Reservation-based federated scheduling for parallel real-time tasks},
+  author={Ueter, Niklas and Von Der Br{\"u}ggen, Georg and Chen, Jian-Jia and Li, Jing and Agrawal, Kunal},
+  booktitle={2018 IEEE Real-Time Systems Symposium (RTSS)},
+  pages={482--494},
+  year={2018},
+  organization={IEEE}
+}
+
 @inproceedings{saha2019stgm,
-  title={STGM: Spatio-temporal {GPU} management for real-time tasks},
+title={{STGM}: Spatio-temporal {GPU} management for real-time tasks},
   author={Saha, Sujan Kumar and Xiang, Yecheng and Kim, Hyoseung},
   booktitle={2019 IEEE 25th International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA)},
   pages={1--6},
