--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/conclusions.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/conclusions.tex
@@ -3,22 +3,18 @@
 \section{CONCLUSIONS}
 \label{sec: conclusions}
 
-\begin{frame}{}
+\begin{frame}{まとめ}
     \begin{itemize}
-        \item 本論文では, 並列リアルタイムタスク用の仮想フェデレートスケジューリングアプローチを開発した
-\item これは, フェデレートスケジューリングの優れた分析可能性を享受し, タスクがプロセッサを他のタスクと効率的に共有できるようにする
-\item 主なアイデアは, 物理プロセッサ上に仮想プロセッサを構築し, 割り当てられた一連の仮想プロセッサ上でタスクを排他的に実行させることである
-\item 各物理プロセッサ上に, 高優先度で実行されるアクティブ VP と低優先度で実行されるパッシブ VP の 2 種類の仮想プロセッサを構築する
-\item アクティブ VP はロスレスな方法でタスクを処理できる
-\item すなわち, アクティブ VP は必要なときにいつでもすぐに実行できるため, タスクに割り当てられたアクティブ VP の合計プロセッサ容量は, まさにそのタスクが必要とするものである
-\item パッシブ VP はアクティブ VP からの干渉を受けるが, リソースの可用性は十分に保証されているため, タスクに割り当てられ, スケジューラビリティが保証される
-\item 総合的な性能評価を行い, 提案したアプローチをさまざまなタイプの既存の方法と比較する
-\item 実験結果は, 異なるパラメーター設定の下で, 我々のアプローチが一貫して既存の方法よりもかなり優れていることを示している
+        \item 並列リアルタイムタスク用の仮想フェデレートスケジューリングアプローチを開発した
+        \item 各物理プロセッサ上に, 高優先度で実行されるアクティブ VP と低優先度で実行されるパッシブ VP の 2 種類の仮想プロセッサを構築する
+        \item アクティブ VP は必要なときにいつでも実行できるため, タスクに割り当てられたアクティブ VP の合計プロセッサ容量は, まさにそのタスクが必要とする容量となる
+        \item パッシブ VP はアクティブ VP からの干渉を受けるが, リソースの可用性は十分に保証されているため, スケジューラビリティが保証される
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{Future work}
     \begin{itemize}
-        \item 今後の作業として, パフォーマンスをさらに改善するためのより洗練されたリソース割り当て戦略を調査し, 任意のデッドラインタスクを処理するためにアプローチ (実際には, 一般的にフェデレーションスケジューリング) を拡張する方法を研究する
+        \item パフォーマンスをさらに改善するためのより洗練されたリソース割り当て戦略を調査する
+        \item 任意のデッドラインタスクを処理するためにアプローチを拡張する
     \end{itemize}
 \end{frame}
