--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
@@ -36,15 +36,15 @@
 % \input{prior_knowledge.tex}
 % \input{introduction.tex}
 % \input{system_model.tex}
-\input{symbols_terms.tex}
+% \input{symbols_terms.tex}
 % \input{overview.tex}
 % \input{tasks_executed_on_active_vp.tex}
-\input{tasks_executed_on_passive_vp.tex}
+% \input{tasks_executed_on_passive_vp.tex}
 % \input{tasks_executed_on_both.tex}
 % \input{resource_allocation.tex}
 % \input{evaluations.tex}
 % \input{related_work.tex}
-% \input{conclusions.tex}
+\input{conclusions.tex}
 
 \lastpage
 
