--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
@@ -3,41 +3,60 @@
 \section{RELATED WORK}
 \label{sec: related work}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 並列タスクのリアルタイムスケジューリングに関する初期の研究では, 制限されたタスク構造を想定する [23]-[31]
-\item 例えば, Gang EDF スケジューリングアルゴリズムは, [24] で成形可能な並列タスク用に提案された
-\item 並列同期タスクモデルは, [25]-[31] で研究された
-\item 近年, 多くの並列ソフトウェアシステムのワークロードを DAG タスクモデルまたはその変形としてモデル化できるため, DAG ベースの並列リアルタイムタスクがますます注目を集めている
-    \end{itemize}
+\begin{frame}{他のフェデレートスケジューリングとの比較}
+    \begin{block}{\cite{jiang2017semi}}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item 異なる重いタスクがプロセッサを他のタスクと共有可能
+            \item ただし, タスクに割り当てられるプロセッサの数に関係なく, 共有される処理能力の量は最大で 1 つのプロセッサ
+        \end{itemize}
+    \end{block}
+    \begin{block}{\cite{ueter2018reservation}}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクを割り当てる
+            \item ただし, タスクの相対的なデッドラインがその周期に近い場合, パフォーマンスの向上はわずか
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item DAG リアルタイムタスクの既存のスケジューリングアルゴリズムは, 4 つの主要なパラダイム (グローバルスケジューリング, 分割スケジューリング, フェデレートスケジューリング, および分解ベースのスケジューリング) に分類できる
-    \end{itemize}
-\end{frame}
+\forme{
+    \begin{frame}{}
+        \begin{itemize}
+            \item 並列タスクのリアルタイムスケジューリングに関する初期の研究では, 制限されたタスク構造を想定する [23]-[31]
+            \item 例えば, Gang EDF スケジューリングアルゴリズムは, [24] で成形可能な並列タスク用に提案された
+            \item 並列同期タスクモデルは, [25]-[31] で研究された
+            \item 近年, 多くの並列ソフトウェアシステムのワークロードを DAG タスクモデルまたはその変形としてモデル化できるため, DAG ベースの並列リアルタイムタスクがますます注目を集めている
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item グローバルスケジューリングでは, 全てのタスクタスクが全てのプロセッサで一緒にスケジュールされる
-\item [32] と [6] では, グローバル EDF (GEDF) とグローバル RM (GRM) スケジューリングの両方に対して線形時間テストが提案されている
-\item 疑似多項式の時間十分なスケジューラビリティテストも [32] で提示された
-\item これは後に一般化され, [33] によって制限されたデッドライン DAG タスクに対して支配された
-\item [7] では, GEDF スケジューリングの下で暗黙のデッドラインを持つ DAG タスクのスケジューラビリティ分析を実行するために, 利用率の限界が提案された
-\item GEDF または GRM スケジューリング [2], [16]-[19], [34] の下で DAG タスクをスケジューリングするための応答時間分析手法も提案されている
-    \end{itemize}
-\end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item DAG リアルタイムタスクの既存のスケジューリングアルゴリズムは, 4 つの主要なパラダイム (グローバルスケジューリング, 分割スケジューリング, フェデレートスケジューリング, および分解ベースのスケジューリング) に分類できる
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item パーティショニングスケジューリングでは, DAGタスクの各頂点が静的にプロセッサに割り当てられ, 各プロセッサのワークロードは自己中断を伴うリアルタイムタスクとしてモデル化され, 分析される[10], [20]
-\item フェデレートスケジューリングでは, 各タスクは専用のプロセッサ群を割り当てられ, 実行時にその上で排他的に実行される.フェデレートスケジューリングはLi.et.al.によって最初に提案され[1], 暗黙のデッドラインを持つタスクに対して, （容量拡張境界の観点から）最高の定量的最悪性能保証を提供するものであった.その後, フェデレートスケジューリングは制約付き締切タスク[35], 任意締切タスク[36], さらに条件分岐を持つDAG[37]へと一般化された.フェデレートスケジューリングは, タスク間で一定の資源共有を可能にするいくつかのバリエーションに拡張される.セミフェデレートスケジューリングアプローチ[4]は, 異なる重いタスクが1つまたは2つのプロセッサを他のタスクと共有することを可能にします.予約ベースの連合型アプローチ[5]は, 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクをディスパッチさせるものである.セクションIで述べたように, [4]と[5]はともにフェデレートスケジューリングの資源浪費の問題を限定的にしか解決していない.
-    \end{itemize}
-\end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item グローバルスケジューリングでは, 全てのタスクタスクが全てのプロセッサで一緒にスケジュールされる
+            \item [32] と [6] では, グローバル EDF (GEDF) とグローバル RM (GRM) スケジューリングの両方に対して線形時間テストが提案されている
+            \item 疑似多項式の時間十分なスケジューラビリティテストも [32] で提示された
+            \item これは後に一般化され, [33] によって制限されたデッドライン DAG タスクに対して支配された
+            \item [7] では, GEDF スケジューリングの下で暗黙のデッドラインを持つ DAG タスクのスケジューラビリティ分析を実行するために, 利用率の限界が提案された
+            \item GEDF または GRM スケジューリング [2], [16]-[19], [34] の下で DAG タスクをスケジューリングするための応答時間分析手法も提案されている
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{段落続き}
-    \begin{itemize}
-        \item 本論文で開発された仮想的フェデレーションアプローチは, タスク間でより積極的にプロセッサを共有することができます.分解ベースのスケジューリングでは, 各DAGは, 独自のリリース時間と相対デッドラインを持つシーケンシャルなサブタスクの集合に変換され, シーケンシャルタスクのための従来のマルチプロセッサスケジューリングアルゴリズムによってスケジューリングされる.分解はタスクの内部構造に従ってオフラインで行われるため, 例えば条件分岐を持つDAGタスクのように, 実行中にDAG構造が変化する可能性がある状況では, 実装が困難である.いくつかの異なる分解方法とその基礎となるスケジューラビリティテストが開発された [11], [12], [38], [39]
-    \end{itemize}
-\end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item パーティショニングスケジューリングでは, DAGタスクの各頂点が静的にプロセッサに割り当てられ, 各プロセッサのワークロードは自己中断を伴うリアルタイムタスクとしてモデル化され, 分析される[10], [20]
+            \item フェデレートスケジューリングでは, 各タスクは専用のプロセッサ群を割り当てられ, 実行時にその上で排他的に実行される.フェデレートスケジューリングはLi.et.al.によって最初に提案され[1], 暗黙のデッドラインを持つタスクに対して, （容量拡張境界の観点から）最高の定量的最悪性能保証を提供するものであった.その後, フェデレートスケジューリングは制約付き締切タスク[35], 任意締切タスク[36], さらに条件分岐を持つDAG[37]へと一般化された.フェデレートスケジューリングは, タスク間で一定の資源共有を可能にするいくつかのバリエーションに拡張される.セミフェデレートスケジューリングアプローチ[4]は, 異なる重いタスクが1つまたは2つのプロセッサを他のタスクと共有することを可能にします.予約ベースの連合型アプローチ[5]は, 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクをディスパッチさせるものである.セクションIで述べたように, [4]と[5]はともにフェデレートスケジューリングの資源浪費の問題を限定的にしか解決していない.
+        \end{itemize}
+    \end{frame}
+
+    \begin{frame}{段落続き}
+        \begin{itemize}
+            \item 本論文で開発された仮想的フェデレーションアプローチは, タスク間でより積極的にプロセッサを共有することができます.分解ベースのスケジューリングでは, 各DAGは, 独自のリリース時間と相対デッドラインを持つシーケンシャルなサブタスクの集合に変換され, シーケンシャルタスクのための従来のマルチプロセッサスケジューリングアルゴリズムによってスケジューリングされる.分解はタスクの内部構造に従ってオフラインで行われるため, 例えば条件分岐を持つDAGタスクのように, 実行中にDAG構造が変化する可能性がある状況では, 実装が困難である.いくつかの異なる分解方法とその基礎となるスケジューラビリティテストが開発された [11], [12], [38], [39]
+        \end{itemize}
+    \end{frame}
+}
