--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/symbols_terms.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/symbols_terms.tex
@@ -58,9 +58,11 @@
 \begin{table}[tb]
 \adjustbox{max width=\textwidth, max height=\slideheight}{
 \centering\begin{tabular}{|c|l|} \hline
-    $\Theta=\left\{\theta_{1}, \cdots, \theta_{|\Theta|}\right\}$ & アクティブVPのセット \\\hline
+    $\Theta=\left\{\theta_{1}, \cdots, \theta_{|\Theta|}\right\}$ & アクティブVPグループ \\\hline
    $\theta_{z}$ & \tabml{$\Theta$ 内の $z$番目のアクティブVPの初期バジェット \\コンテキストから明白な場合は$\Theta$ 内の $z$番目のアクティブVPも示す} \\\hline
-
+$\Pi=\left\{\pi_{1}, \cdots, \pi_{|\Pi|}\right\}$ & パッシブVPグループ \\\hline
+$s b f_{\pi_{x}}(\Delta)$ & パッシブ VP $\pi_{x}$の供給境界関数 \\\hline
+$\lambda=\left\{v_{1}, \cdots, v_{|\lambda|}\right\}$  & タスク $\tau_{i}$ のジョブ $J_{i}$のキーパス  \\\hline
 \end{tabular}
 }
 \end{table}
