--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
@@ -163,16 +163,12 @@
     \fullimage{alg1}
 \end{frame}
 
-\begin{frame}{割り当てアルゴリズム補足1}
+\begin{frame}{割り当てアルゴリズム補足 [アクティブVPグループの割り当て]}
     \fullimage{alg1_sup1}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 次のステップは, パッシブ VP を残りのタスクに割り当てることである
-        \item $\tau_{i}$ に残っているタスクごとに, (17) を満たすパッシブ VP をそのパッシブ VP グループ $\Pi$ に繰り返し追加し, 条件 (8) を使用して, $\tau_{i}$ がスケジュール可能になるか, $\tau_{i}$ に役立つパッシブ VP がなくなるまで, $\tau_{i}$ がスケジュール可能かどうかを確認する
-        \item したがって, アルゴリズムは失敗する
-    \end{itemize}
+\begin{frame}{割り当てアルゴリズム補足 [パッシブVPグループの割り当て]}
+    \fullimage{alg1_sup2}
 \end{frame}
 
 \forme{
